<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_category1"
        android:title="@string/pref_category1" >

        <CheckBoxPreference
            android:key="pref_checkbox"
            android:title="@string/pref_checkbox"
            android:summary="@string/pref_checkbox_desc"
            android:defaultValue="true" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="pref_category2"
        android:title="@string/pref_category2" >

        <EditTextPreference
            android:key="pref_edittext"
            android:title="@string/pref_edittext"
            android:summary="@string/pref_edittext_desc"
            android:defaultValue="@string/pref_edittext_default" />

        <ListPreference
            android:key="pref_list"
            android:title="@string/pref_list"
            android:dialogTitle="@string/pref_list"
            android:entries="@array/pref_list_entries"
            android:entryValues="@array/pref_list_values"
            android:defaultValue="@string/pref_list_default" />

    </PreferenceCategory>

</PreferenceScreen>