<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.cis3238.gravity.gravity.fragment.LevelEndFragment">

    <TextView
        android:id="@+id/win_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/win_title"/>

    <LinearLayout
        android:id="@+id/level_end_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/win_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/grade_title" />

        <TextView
            android:id="@+id/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:text="@string/grade_placeholder" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/level_end_score_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/level_end_grade"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/level_end_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/score_title"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@string/score_placeholder"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/level_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:text="@string/time_title"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@string/time_placeholder"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/level_end_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/level_end_score_time"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next_level_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_level_button"/>

        <Button
            android:id="@+id/retry_level_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_level_button"/>

        <Button
            android:id="@+id/main_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_button"/>

    </LinearLayout>

</RelativeLayout>
