<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.temple.cis3238.gravity.gravity.fragment.LevelEndFragment">

    <TextView
        android:id="@+id/loss_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:text="@string/loss_title"/>

    <LinearLayout
        android:id="@+id/level_end_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/loss_title"
        android:orientation="horizontal">

        <Button
            android:id="@+id/retry_level_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry_level_button"/>

        <Button
            android:id="@+id/main_menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_button"/>

    </LinearLayout>

</RelativeLayout>
